# sec-sem8

./: .gitignore  Makefile  pyproject.toml  requirements.txt  states.puml
sec_sem8/: client.py  console.py  diffie_hellman.py  entities.py  hash_task.py  impl.py  messages.py  mitm.py  primes.py  rc4.py  register_user_gui.py  server.py
sec_sem8/connection/: active_connection.py  client_messages.py  client_states.py  passive_connection.py  server_messages.py  server_states.py
tests/: test_database.py
